--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -67,8 +67,11 @@ a:active .navbar-static-top__icon-circle {
 .landing-bottom__icon-gift-better-gift-wrapt {
   width: 443px;
   height: 73px;
-  @media (max-width: $screen-sm-max) {
+  @media (max-width: $screen-xs-max) {
     width: 90vw;
+    &.mt4 {
+      margin-top: 0px;
+    }
   }
 }
 use.icon-dislike-use .path1,
