--- a/app/views/home/show.haml
+++ b/app/views/home/show.haml
@@ -1,7 +1,7 @@
 .home__hero
   .container.home__hero-text
     .row
-      .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
+      .col-sm-12.col-md-8.col-md-offset-2
         %h1.light.text-center
           .rotate-words__sentence
             %span Gift
@@ -18,7 +18,7 @@
           Gift Wrapt.
 .container.home__hero-text-secondary
   .row
-    .col-lg-8.col-lg-offset-2
+    .col-xs-12.col-sm-8.col-sm-offset-2.col-lg-8.col-lg-offset-2
       %p.home__hero-text-secondary__p.light.text-center
         We use the science of gifting to find the best gifts for her,
         %br
