--- a/app/assets/stylesheets/modules/_modals.scss
+++ b/app/assets/stylesheets/modules/_modals.scss
@@ -1,12 +1,36 @@
 @import "helpers";
 
 .modal-dialog {
-  width: 748px;
+  max-width: 748px;
+  width: 100%;
+  @media(max-width: $screen-xs-max) {
+    max-width: 100%;
+    height: 100%;
+    margin: 0px auto;
+  }
 }
 .modal-content {
   @include shadowed-box__05;
   border: 0;
   background-color: $blue-010;
+  @media(max-width: $screen-xs-max) {
+    height: 100%;
+  }
+}
+.modal-header .close {
+  background-color: $blue-001;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  padding-top: 5.5px;
+  opacity: 0.8;
+  color: $blue-010;
+  fill: $blue-010;
+  &:hover,
+  &:focus,
+  &:active {
+    opacity: 1;
+  }
 }
 .modal-backdrop.in {
   opacity: .3;
