--- a/app/assets/stylesheets/modules/_landing_pages.scss
+++ b/app/assets/stylesheets/modules/_landing_pages.scss
@@ -364,7 +364,9 @@ body.home,
   margin-bottom: 0;
 }
 .home .top-navigation__container,
-.home .container {
+.home .container,
+.profiles .container,
+.profiles .top-navigation__container {
   width: 100%;
   @media (min-width: 1140px) {
     width: 1140px;
