--- a/app/views/survey_question_responses/_multiple_choice_fields.haml
+++ b/app/views/survey_question_responses/_multiple_choice_fields.haml
@@ -8,12 +8,10 @@
   - if @question_response.survey_question.multiple_option_responses
     .hint.hint__inline Select All That Apply
 
-- @question_response.survey_question.options.in_groups_of(5, false).each do |option_row|
-  .row.option-row
-    .col-xs-12
-      - option_row.each do |option|
-        = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
-
+.row.option-row
+  .col-xs-12
+    - @question_response.survey_question.options.each do |option|
+      = link_to option.text, '#', class: 'btn btn-default btn-multiple-choice-option', data: {behavior: 'option-button', option_id: option.id}
 
 = form.input :other_option_text, as: :string, label: false, wrapper_html: { data: {behavior: 'other-text-input-wrapper'}, style: other_optional_text_init_style(@question_response)}, input_html: {data: {behavior: 'other-text-input'}}
 
