--- a/app/assets/stylesheets/modules/_buttons.scss
+++ b/app/assets/stylesheets/modules/_buttons.scss
@@ -148,6 +148,8 @@ label.btn-multiple-choice-option {
   }
   @media(max-width: $screen-xs-max) {
     width: 100%;
+    padding: 12px 10px;
+    margin-bottom: 8px;
   }
   &:nth-child(even) {
     @media(max-width: $screen-sm-max) {
@@ -195,6 +197,9 @@ label.btn-multiple-choice-option.selected {
   letter-spacing: 2.1px;
   padding-left: initial;
   padding-right: initial;
+  @media(max-width: $screen-xs-max) {
+    width: 130px;
+  }
 }
 
 .sqr-submit__btn:disabled,
