--- a/app/assets/stylesheets/modules/_nav.scss
+++ b/app/assets/stylesheets/modules/_nav.scss
@@ -46,7 +46,7 @@
 .top-navigation__container {
   height: 120px;
   padding: 30px 15px;
-  @media (min-width: $screen-md-min) {
+  @media (min-width: $screen-sm-min) {
     width: 100%;
     height: 120px;
     padding: 30px 15px;
