--- a/app/views/application/_carousel_js.haml
+++ b/app/views/application/_carousel_js.haml
@@ -144,29 +144,42 @@
       @_update_indicators()
       $(@carousel).trigger('slide:change')
 
-    _debounce: (func, wait) ->
+    _debounce: (func, wait, immediate) =>
+      result = null
+      args = null
       timeout = null
-      that = this
-      ->
-        context = that
-        args = arguments
-        later = ->
+      timestamp = null
+      context = null
+      later = () =>
+        last = new Date - timestamp
+        if last < wait && last >= 0
+          timeout = setTimeout(later, wait - last)
+        else 
           timeout = null
-          func.apply(context, args)
-        
-        clearTimeout(timeout)
-        timeout = setTimeout(later, wait)
-      
+          if !immediate
+            result = func.apply(context, args)
+            if !timeout
+              context = args = null
+      () =>
+        context = this
+        args = arguments
+        timestamp = new Date
+        callNow = immediate && !timeout
+        if !timeout
+          timeout = setTimeout(later, wait)
+        if callNow
+          result = func.apply(context, args)
+          context = args = null
+
+        result 
 
     _perform_resize: () ->
-      width = $(window).width()
       @_reset_slides()
       @_set_height()
       @_init_slides(false)
 
     _resize_carousel: () ->
-      debounce_func = @_debounce(@_perform_resize, 500)
-      $(window).resize(debounce_func)
+      $(window).resize @_debounce(@_perform_resize, 1000)
 
   class ImageCarousel extends Carousel
 
