--- a/app/views/gift_recommendations/_gift_like.haml
+++ b/app/views/gift_recommendations/_gift_like.haml
@@ -1,12 +1,12 @@
 - if gift_like = existing_gift_like(gift, profile)
   = link_to profile_gift_like_path(profile, gift_like), method: :delete, remote: true, data: {type: 'html'}, class: 'liked', onClick: "ga('send', 'event', 'recommendation', 'like-dislike', 'remove_like');" do
-    = embedded_svg('icon-like', xlink_class: 'icon-liked-use', class: 'recommendation__icon-liked')
+    = embedded_svg('icon-wrapt-heart', xlink_class: 'icon-liked-use', class: 'recommendation__icon-liked')
     .small-02 You Liked This
 - else
   - if Rails.application.config.x.features.enable_like_reasons
     .btn-group
       = link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
-        =embedded_svg('icon-like', xlink_class: 'icon-like-use', class: 'recommendation__icon-like')
+        =embedded_svg('icon-wrapt-heart', xlink_class: 'icon-like-use', class: 'recommendation__icon-like')
       %ul.dropdown-menu.dropdown-menu-right.pa1
         - GiftLike.reasons.keys.each do |reason_key|
           %li= link_to like_reason_label(reason_key), profile_gift_likes_path(profile), method: :post, remote: true, data: {type: 'html', params: {gift_like: {gift_id: gift.id, reason: reason_key}}}, class: 'gift_like_reason', onClick: "ga('send', 'event', 'recommendation', 'like-dislike', 'like - #{reason_key}');"
