--- a/app/views/survey_response_completions/show.haml
+++ b/app/views/survey_response_completions/show.haml
@@ -1,23 +1,23 @@
 .container
   .row
     .col-xs-12
-      .pa3.text-center
+      .quiz-complete__text.pa3.text-center
         %h1 Terrific, now we have all the information we need to make gift recommendations for #{@survey_response.giftee_name}.
 
 
-      = simple_form_for @survey_response_completion, url: with_invitation_scope(profile_survey_completion_path(@profile, @survey_response)) do |form|
+      = simple_form_for @survey_response_completion, url: with_invitation_scope(profile_survey_completion_path(@profile, @survey_response)), html: {class: 'quiz-complete__form'} do |form|
         .pa4
           - unless current_user.active?
             %h4 Create Your Account
             .row
-              .col-xs-6
+              .col-sm-6
                 = form.input :user_first_name, label: 'First Name'
-              .col-xs-6
+              .col-sm-6
                 = form.input :user_last_name, label: 'Last Name'
             .row
-              .col-xs-6
+              .col-sm-6
                 = form.input :user_email, label: 'Email Address'
-              .col-xs-6
+              .col-sm-6
                 = form.input :user_password, label: 'Password', value: ''
 
           = form.submit 'View Gift Recommendations'.upcase, class: 'btn btn-primary btn-sm btn-full-width'
