--- a/app/views/gift_recommendations/_add_to_basket_button.haml
+++ b/app/views/gift_recommendations/_add_to_basket_button.haml
@@ -1,5 +1,7 @@
 - @_selected_gift_ids ||= profile.gift_selections.pluck(:gift_id)
 - if gift_selection.gift_id.in? @_selected_gift_ids
-  = submit_tag 'ADDED TO BASKET', class: 'btn btn-primary btn-narrower', disabled: true
+  -#= submit_tag 'ADDED TO BASKET', class: 'btn btn-primary btn-narrower', disabled: true
+  = link_to 'VIEW BASKET', '#', class: 'btn btn-primary btn-narrower btn-full-width', data: {behavior: 'open-gift-basket'}
 - else
   = submit_tag 'ADD TO BASKET', class: 'btn btn-primary btn-narrower', onClick:"ga('send', 'event', 'basket', 'add to basket', '#{gift_selection.gift.title}');"
+
