--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -315,3 +315,8 @@ label {
 .mvp1b-user-surveys__questions li {
   margin-bottom: 18px;
 }
+.home .form-actions.pull-right {
+  position: absolute;
+  right: 20px;
+  bottom: -28px;
+}
