--- a/app/views/home/_wrapt_stories.haml
+++ b/app/views/home/_wrapt_stories.haml
@@ -5,7 +5,7 @@
         .pb3
           %h3.text-center.light ReWrapt
           %p.home__about-intro.text-center 
-            Stories about impact
+            Inspiring stories of the Makers behind our gifts.
         .home__gift-examples-carousel
           = carousel(carousel: load_home_page_carousel_data, unique_carousel_name: 'hgec-carousel', slide_content_singular: 'example')
 
