--- a/app/assets/stylesheets/modules/_loading.scss
+++ b/app/assets/stylesheets/modules/_loading.scss
@@ -1,3 +1,4 @@
+@import "helpers/variables";
 .app-loading__container {
   position: fixed;
   top: 0px;
@@ -12,7 +13,7 @@
   img {
     width: 200px;
     position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 15%;
+    transform: translateY(-15%);
   }
 }
