--- a/app/views/gift_selections/_gift_basket.haml
+++ b/app/views/gift_selections/_gift_basket.haml
@@ -12,13 +12,11 @@
         Subtotal
         %span.pull-right &#8212;
       %p.help.gift-basket__footer__text 
-        You can’t quite purchase those gifts yet, but soon you can!
-        %br
-        Instead, we'd like to share the gifts Wrapt recommended with your #{@profile.relationship&.downcase}, and ask which ones #{@profile.name} would like or not like. If you're up for having us email her, please click the button below and provide her email address. Thank you!
+        We're not fulfilling orders during this testing period. Thank you for taking Wrapt for a spin! We hope you like what you found.
       
 
       -#= link_to 'SEND GIFT SELECTION NOTIFICATION', new_profile_giftee_invitation_path(profile), class: 'btn btn-primary btn-full-width btn-gift-basket-submit', data: {loads_in_pjax_modal: true, behavior: 'gift-basket-submit'}, onClick: "ga('send', 'event', 'basket', 'share with giftee', 'step 1 - button');"
-      = link_to 'CHECK OUT', '#', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
+      = link_to 'CHECK OUT COMING SOON', '#', class: 'btn btn-primary btn-full-width btn-gift-basket-submit'
 
       
 
