--- a/app/assets/stylesheets/modules/_alerts.scss
+++ b/app/assets/stylesheets/modules/_alerts.scss
@@ -5,6 +5,9 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  @media (max-width: $screen-sm-max) {
+    width: 90%;
+  }
 }
 .alert-dismissable .close {
   position: absolute;
