--- a/app/views/gift_recommendations/_gift.haml
+++ b/app/views/gift_recommendations/_gift.haml
@@ -1,9 +1,10 @@
 - gift = locals[:gift]
 - gr = locals[:gift_recommendation]
+- index = locals[:index]
 .gr-carousel__gift.clearfix
   .gr-carousel__gift-image
     - gift_images = load_gift_image_carousel_data(gift.gift_images)
-    = carousel(carousel: gift_images, unique_carousel_name: 'gr-image-carousel', slide_content_singular: 'image', container:'.gr-carousel')
+    = carousel(carousel: gift_images, unique_carousel_name: 'gr-image-carousel', slide_content_singular: 'image', container:'.gr-carousel', parent_slide_index: index)
   .gr-carousel__gift-content.pb2.pl2.pt1.pr1
     .pull-right.text-right.pb1
       .gr-carousel__like{data: {behavior: 'gift-like-wrapper'}}
