--- a/app/views/gift_recommendations/index.haml
+++ b/app/views/gift_recommendations/index.haml
@@ -8,9 +8,10 @@
   .row.wrapt-carousel--wrapper
     .col-xs-12
       - gifts = load_gift_recommendation_carousel_data(@gift_recommendations)
-      = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift')
+      = carousel(carousel: gifts, unique_carousel_name: 'gr-carousel', slide_content_singular: 'gift', id: 'gr-carousel')
   
 - content_for :page_js do
   = render '/application/carousel_js'
   :javascript
     new App.GiftLikeDislikeButtons();
+
